--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 .logo-esquerda {
     display: block;
-    margin: 0 auto 0 0; /* Alinha a logo à esquerda */
+    max-width: 150px
+    width: 100px
+    margin: 0 auto 0 0;
+    height: auto;
+    
 }
