--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 .logo-esquerda {
     display: block;
     max-width: 150px
-    width: 70px
+    width: 50px
     margin: 0 auto 0 0;
     height: auto;
     
 }
+
+
+
 
 iframe {
     width: 100%; /* Ocupa toda a largura do contêiner */
@@ -36,6 +39,9 @@ header {
     /* Aumenta o padding em telas menores */
     header {
         padding: 1.5rem;
+    }
+    .logo-esquerda{
+        max-width: 20px;
     }
 }
 
