--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@
 }
 
 
-
-
 iframe {
     width: 100%; /* Ocupa toda a largura do contêiner */
     max-width: 100%; /* Limita a largura máxima para a tela */
@@ -41,7 +39,9 @@ header {
         padding: 1.5rem;
     }
     .logo-esquerda{
-        max-width: 20px;
+        max-height: 100%;
+        height: 100%;
+        width: auto;
     }
 }
 
