--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ header {
     }
     .logo-esquerda{
         max-height: 100%;
-        height: auto%;
+        height: auto;
         width: 100%;
     }
 }
@@ -59,7 +59,7 @@ header {
 
 .banner {
     text-align: center;
-    padding: 1rem;
+    
     background-color: #f4f4f4;
   }
   
