--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 .logo-esquerda {
     display: block;
-    max-width: 70px
-    width: 50px
+    max-width: 50px;
     margin: 0 auto 0 0;
-    height: auto;
+    height:auto ;
     
 }
 
@@ -31,6 +30,13 @@ body, html {
 
 header {
     padding: 1rem; /* Padding padrão para desktops */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #ffffff; /* Cor de fundo opcional */
+    color: #000000; /* Cor do texto */
+    text-align: center;
 }
 
 @media (max-width: 768px) {
