--- a/style.css
+++ b/style.css
@@ -87,3 +87,23 @@ header {
 .name {
     display:none;
 }
+
+/* Estilos para o loader */
+.loader {
+    border: 8px solid #f3f3f3; /* Cor do contorno */
+    border-top: 8px solid #3498db; /* Cor do loader */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite; /* Animação de rotação */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none; /* Oculto por padrão */
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
